# frontend-music-plug-in

./: .gitignore  CMakeLists.txt  README.md  install-codesign.cmake.in  packaging.cmake  release-notes.md
src/: CMakeLists.txt  CocoaKeysToProjectM.h  iprojectM.hpp  iprojectM.mm  iprojectM_mac.mm
src/Resources/: ProjectM-plugin-info.plist  ProjectM-plugin-info.plist.bak
